<resources>
    <string name="app_name">Hair Growth Calculator</string>
    <string name="settings">Settings</string>
    <string name="help">Help</string>
    <string name="title_activity_settings">Settings</string>

    <!-- Preference Titles -->
    <string name="metrics_header">Metric Options</string>
    <string name="metrics_choice" />
    <string name="metrics_summary_inches">Calculate hair growth in inches</string>
    <string name="metrics_summary_cm">Calculate hair growth in centimeters</string>
    <string name="textViewInches">Inches</string>
    <string name="TextViewCm">Centimeters</string>
    <string name="calculate">Calculate</string>
    <string name="hair_growth_calculator_formula_nhair_growth_length_hair_growth_time_x_0_5_inches">Hair Growth Calculator Formula:\nHair growth length = Hair growth time x 0.5 inches.</string>
    <string name="reset">Reset</string>
    <string name="inches">Inches</string>
    <string name="hair_growth_length">Hair Growth Length:</string>
    <string name="months">Months</string>
    <string name="hair_growth_time">Hair Growth Time:</string>
    <string name="fill_in_the_following_fields_to_calculate_your_approximate_hair_growth_over_a_certain_period_of_time">Fill in the following fields to calculate your approximate hair growth over a certain period of time.</string>
    <string-array name="metrics_option">
        <item>Centimeters</item>
        <item>Inches</item>
    </string-array>

</resources>
