<?xml version="1.0" encoding="utf-8"?>
<androidx.appcompat.widget.LinearLayoutCompat
    xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:orientation="vertical"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".MainActivity">
    <TextView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="14dp"
        android:layout_marginBottom="14dp"
        android:layout_marginStart="14dp"
        android:layout_marginEnd="14dp"
        android:text="@string/fill_in_the_following_fields_to_calculate_your_approximate_hair_growth_over_a_certain_period_of_time"
        android:textSize="20sp"
        android:textStyle="bold"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintLeft_toLeftOf="parent"
        app:layout_constraintRight_toRightOf="parent"
        app:layout_constraintTop_toTopOf="parent" />
    <TableLayout
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:orientation="horizontal">
        <TableRow>
            <TextView
                android:text="@string/hair_growth_time"
                android:textSize="18sp"
                android:layout_marginStart="12dp">
            </TextView>
            <EditText
                android:layout_width="155dp"
                android:id="@+id/months_et"
                android:inputType="number">
            </EditText>
            <TextView
                android:text="@string/months"
                android:textSize="18sp"
                android:layout_marginEnd="12dp">
            </TextView>
        </TableRow>
        <TableRow>
            <TextView
                android:text="@string/hair_growth_length"
                android:textSize="18sp"
                android:layout_marginRight="12dp"
                android:layout_marginLeft="12dp">
            </TextView>
            <TextView
                android:id="@+id/tv_result"
                android:textSize="18sp"
                android:textStyle="bold">
            </TextView>
            <TextView
                android:text="@string/inches"
                android:textSize="18sp"
                android:id="@+id/metricChoice">
            </TextView>
        </TableRow>
        <TableRow>
            <Button
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginBottom="12dp"
                android:layout_weight="1.0"
                android:layout_marginStart="12dp"
                android:layout_marginTop="12dp"
                android:textSize="18sp"
                app:backgroundTint="@android:color/holo_red_light"
                android:text="@string/calculate"
                android:id="@+id/calculate"
                tools:ignore="ButtonStyle" />
            <Button
                android:layout_width="wrap_content"
                android:layout_weight="1.0"
                android:layout_height="wrap_content"
                android:layout_marginEnd="12dp"
                android:layout_marginBottom="12dp"
                android:layout_marginTop="12dp"
                android:textSize="18sp"
                android:text="@string/reset"
                android:id="@+id/reset"
                tools:ignore="ButtonStyle" />
        </TableRow>
    </TableLayout>
    <TextView
        android:id="@+id/textView2"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginBottom="14dp"
        android:layout_marginStart="14dp"
        android:layout_marginEnd="14dp"
        android:textSize="20sp"
        android:text="@string/hair_growth_calculator_formula_nhair_growth_length_hair_growth_time_x_0_5_inches" >
    </TextView>
</androidx.appcompat.widget.LinearLayoutCompat>